--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <!-- navbar -->
 
-<nav class="navbar navbar-expand-lg bg-white ">
+<nav class="navbar navbar-expand-lg bg-white topbar1">
     <div class="container">
       <a class="navbar-brand" href="#"><img src="./images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +101,7 @@
 
 <!-- slider -->
 
-<div  id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" style="background-color: rgba(0, 0, 0, 0.3);">
+<div  id="carouselExampleCaptions" class="carousel slide topbar1" data-bs-ride="false" style="background-color: rgba(0, 0, 0, 0.3);">
     <div   class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -154,7 +154,7 @@
 
 
 <!-- About Us -->
-<section class="py-3" style="margin-top: 60px;">
+<section class="py-3 topbar1" style="margin-top: 60px;">
   <div class="container">
     <div class="row align-items-center justify-content-evenly" data-aos="zoom-in">
       <div class="col-md-6">
@@ -208,7 +208,7 @@
 
 <!-- services -->
 
-<section class="py-3" style="margin: 60px 0px;">
+<section class="py-3 topbar1" style="margin: 60px 0px;">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-evenly gap-4" data-aos="zoom-out-up">
       <div class="services-card">
@@ -240,7 +240,7 @@
 
 
 <!-- premium -->
-<section>
+<section class="topbar1">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6 p-0 m-0">
@@ -264,7 +264,7 @@
 
 
 <!-- testimonial -->
-<section class="my-5 py-5">
+<section class="my-5 py-5 topbar1">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -293,7 +293,7 @@
 <!-- blog -->
 
 
-<section class="my-5 py-5" data-aos="fade-up"
+<section class="my-5 py-5 topbar1" data-aos="fade-up"
 data-aos-duration="3000">
   <div class="text-center">
     <h4 style="color: rgb(81, 250, 250);">Our Blog</h4>
@@ -348,7 +348,7 @@ data-aos-duration="3000">
 
 
 <!-- Contact us -->
- <section class="my-5">
+ <section class="my-5 topbar1">
   <div class="bg-images">
     <div class="overlayy d-flex flex-wrap align-items-center justify-content-around">
       <div>
@@ -366,7 +366,7 @@ data-aos-duration="3000">
 <!-- Contact us -->
 
 <!-- work -->
-<section class="py-3 mb-2">
+<section class="py-3 mb-2 topbar1">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-evenly gap-5">
       <div class="services-card1 p-4">
@@ -398,7 +398,7 @@ data-aos-duration="3000">
 
 
 <!-- footer -->
-<section>
+<section class="topbar1">
 <div style="background-color: #212529; " class="pt-5">
 <section class="container d-flex flex-wrap justify-content-evenly gap-2  py-5">
 
