updated code success

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 <!-- About Us -->
 
 <!-- services -->
-
-<section class="py-3 topbar1" style="margin: 60px 0px;">
+<div class="topbar1">
+<section class="py-3 " style="margin: 60px 0px;">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-evenly gap-4" data-aos="zoom-out-up">
       <div class="services-card">
@@ -234,7 +234,7 @@
     </div>
   </div>
 </section>
-
+</div>
 
 <!-- services -->
 
