--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner " >
-      <div  class="carousel-item active " style="height: 90vh; ">
+      <div  class="carousel-item active " >
         <img src="./images/slider1.jpg" class="d-block w-100 img-fluid" alt="..." >
         <div class="carousel-caption d-none d-md-block" data-aos="fade-up" >
           <div class="custom1">
@@ -118,7 +118,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item " style="height: 90vh;">
+      <div class="carousel-item " >
         <img src="./images/slider2.jpg" class="d-block w-100 img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block" data-aos="fade-up">
           <div class="custom1">
@@ -128,7 +128,7 @@
           </div>
         </div>
       </div>
-      <div  class="carousel-item " style="height: 90vh;">
+      <div  class="carousel-item " >
         <img src="./images/slider3.jpg" class="d-block w-100 img-fluid" alt="...">
         <div class="carousel-caption d-none d-md-block" data-aos="fade-up">
           <div class="custom1">
@@ -300,7 +300,7 @@ data-aos-duration="3000">
     <h1>Latest News & Event</h1>
   </div>
 
-<div class="d-flex justify-content-evenly align-items-center pt-5 overflow-hidden">
+<div class="d-flex flex-wrap justify-content-evenly align-items-center pt-5 overflow-hidden">
 
   <div class="card1">
     <img class="img-fluid" src="./images/card1.jpg" alt="">
